fix(site:Navigation): Colapses nav sooner to prevent overflow

--- a/web/src/components/Common/Navigation/Navigation.module.scss
+++ b/web/src/components/Common/Navigation/Navigation.module.scss
@@ -161,7 +161,7 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
   .Root .NavLink:not(:first-child),
   .Dropdown .DropdownBtn {
     display: none;
